# relm

./: README.md  requirements.txt  requirements_full_cpu.txt  requirements_minimal.txt
experiments/: README.md  (+1 more)
relm/: .gitignore  Cargo.toml  README.md  build_wheel.sh  install.sh  pyproject.toml  run_tests.sh  run_tests_cpu.sh  sanitize_code.sh  setup.cfg
relm/python/relm/: __init__.py  abstract_search_strategy.py  automata.py  automata_search_strategy.py  checking.py  directed_automata_search_strategy.py  facade.py  indexing.py  model_wrapper.py  priority_queue.py  regex_graph_optimizations.py  regex_matcher.py  regex_parser_strategy.py  regex_token_preprocessor.py  regex_token_remapper.py  relm_logging.py  relm_search_query.py  simple_automata_search_strategy.py  system_util.py  text_encodings.py  util.py
relm/python/relm/regex_backend/: python_regex_backend.py  rust_regex_backend.py
relm/src/: lib.rs
relm/src/relm/: __init__.py  abstract_search_strategy.py  automata.py  automata_search_strategy.py  checking.py  directed_automata_search_strategy.py  facade.py  indexing.py  model_wrapper.py  randomized_search_strategy.py  regex.py  regex_graph_optimizations.py  regex_matcher.py  regex_parser_strategy.py  regex_token_preprocessor.py  regex_token_remapper.py  relm_logging.py  relm_search_query.py  simple_automata_search_strategy.py  system_util.py  text_encodings.py  util.py
relm/tests/: test_automata.py  test_end_to_end.py  test_indexing.py  test_inv_regex.py  test_model_wrapper.py  test_regex.py  test_regex_graph_optimizations.py  test_regex_matcher.py  test_regex_parser_strategy.py  test_regex_token_preprocessor.py  test_runtime.py  test_text_encodings.py
relm/tests/integration/: test_end_to_end.py  test_model_wrapper.py  test_regex_graph_optimizations_integration.py  test_regex_parser_strategy.py
relm/tests/unit/: test_automata.py  test_indexing.py  test_inv_regex.py  test_regex_graph_optimizations.py  test_regex_matcher.py  test_regex_token_preprocessor.py  test_runtime.py  test_text_encodings.py
rust_regex_compiler/: .gitignore  Cargo.toml
rust_regex_compiler/benches/: bench.rs
rust_regex_compiler/src/: lib.rs  main.rs
rust_regex_compiler/tests/: integration_tests.rs
rust_regex_compiler_bindings/: Cargo.toml  install.sh  install_deps.sh  pyproject.toml
rust_regex_compiler_bindings/examples/: regex.py
rust_regex_compiler_bindings/src/: lib.rs
(+38 files in other folders)
