[metadata]
name = relm-mkuchnik
version = 0.0.1
author = Michael Kuchnik
author_email = michaelkuchnik@gmail.com
description = Test LLMs with regular expressions
long_description = file: README.md
long_description_content_type = text/markdown
# TODO(mkuchnik): Fill out and add license
url = https://github.com/mkuchnik
project_urls =
    Bug Tracker = https://github.com/mkuchnik
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    matplotlib
    networkx
    numpy
    pandas
    psutil
    pynini
    scipy
    transformers
    rust_regex_compiler_bindings

[options.packages.find]
where = src
