[package]
name = "rust_regex_compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex-syntax = "0.6.27"
rustfst = "0.11.5"

[[bench]]
name = "bench"
harness = false

[dev-dependencies]
criterion = "0.3"
