[package]
name = "rust_regex_compiler_bindings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_regex_compiler_bindings"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16.5", features = ["extension-module"] }
rust_regex_compiler = { version = "0.1.0", path = "../rust_regex_compiler" }
regex-syntax = "0.6.27"
rustfst = "0.11.5"